toques finais de hoje

--- a/portfolio.html
+++ b/portfolio.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#222222" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="#222222" />
     <title>Raphael Campos</title>
     <link rel="stylesheet" href="css/style.css" />
     <script
@@ -26,7 +29,7 @@
         <h2 class="site-subtitle">Portfólio</h2>
       </div>
     </header>
-    <div class="wrapper">
+    <!-- <div class="wrapper">
       <nav class="scroller">
         <ul>
           <li><a href="#sobre">Sobre</a></li>
@@ -152,7 +155,8 @@
           </div>
         </section>
       </div>
-    </div>
+    </div> -->
+    <div class="wrapper">Portfolio em breve...</div>
     <footer>
       <p>2020&copy; Raphael Campos</p>
       <p>
