--- a/curriculo.html
+++ b/curriculo.html
@@ -26,7 +26,7 @@
       </nav>
       <div class="titulos">
         <h1 class="site-title">Raphael Campos</h1>
-        <h2 class="site-subtitle">Currículum Vitae</h2>
+        <h2 class="site-subtitle">Curriculum Vitae</h2>
       </div>
     </header>
     <!-- <div class="wrapper">
@@ -156,7 +156,7 @@
         </section>
       </div>
     </div> -->
-    <div class="wrapper">Curriculo em breve...</div>
+    <div class="wrapper">Currículo em breve...</div>
     <footer>
       <p>2020&copy; Raphael Campos</p>
       <p>
